syntax = "proto3";

option go_package = "github.com/tamboto2000/learning-go-grpc/helloworld/pb";

service HelloWorld {
    rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string name = 1;
}